# habits_drf

./: .env.sample  README.md  django  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_habit_period.py  0003_alter_habit_habit_duration_alter_habit_habit_period.py  0004_prize_prize_owner.py  0005_alter_habit_habit_period.py
users/: serializers.py  urls.py  views.py
users/management/commands/: create_super_user.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_user_avatar_user_user_city_and_more.py
